# simple-llm-openai-wrapper

./: README.md  example_client.py  pyproject.toml
openai_wrapper/: __init__.py  wrapper.py
