[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-wrapper"
version = "0.1.0"
description = "Highly configurable OpenAI API wrapper with retries, model fallback, and JSON enforcement."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "openai>=1.0.0",
    "tenacity",
    "json-repair"
]
requires-python = ">=3.8"
